--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.2
 jedi==0.18.0
 Jinja2==2.11.2
+jsondiff==1.2.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.7
